<resources>
    <string name="app_name">EduCorp</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member">Already a member?</string>
    <string name="type">Type</string>
    <string name="parent">Parent</string>
    <string name="tutor">Tutor</string>
    <string name="not_found">User not found.</string>
    <string name="error">Can\'t login at this time.</string>
    <string name="please_provide">Please fill all details.</string>
    <string name="please_wait">Please wait..</string>
    <string name="error_register">Can\'t register at this time.</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="address">Address</string>
    <string name="zipCode">Zipcode</string>
    <string name="student">Student</string>
    <string name="school">School</string>
    <string name="grade">Grade</string>
    <string name="subjectsOpted">Subject(s) Opted</string>
    <string name="maths">Maths</string>
    <string name="science">Science</string>
    <string name="bio">Bio</string>
    <string name="student_tutoring">Student Tutoring</string>
    <string name="update">Update</string>
    <string name="failed">Failed to update</string>
</resources>
