<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/student"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/studentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_action_editor_mode_edit" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/schoolET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_action_editor_mode_edit" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/grade"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/gradeET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_action_editor_mode_edit" />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>